--- a/code/ex1-linear regression/1.linear_regreesion_v1.ipynb
+++ b/code/ex1-linear regression/1.linear_regreesion_v1.ipynb
@@ -391,6 +391,7 @@
     "    # 1*m @ m*1 = 1*1 in matrix multiplication\n",
     "    # but you know numpy didn't do transpose in 1d array, so here is just a\n",
     "    # vector inner product to itselves\n",
+    "    # {{\lVert{Ax-b}\rVert}_2}^2={(Ax-b)}^T*(Ax-b)
     "    square_sum = inner.T @ inner\n",
     "    cost = square_sum / (2 * m)\n",
     "\n",
